cfk/2-broker/mds-bootstrap.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: kafka
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: kafka
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: mds-bootstrap
  namespace: confluent
  labels:
    confluent-platform: "true"
    cr-name: kafka
    type: kafka
spec:
  ports:
    - name: external
      port: 8090
      protocol: TCP
      targetPort: 8090
  selector:
    app: kafka
    clusterId: confluent
    confluent-platform: "true"
    type: kafka
  sessionAffinity: None
  type: ClusterIP
