cfk/2-broker/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cp-ingress-kafka
  namespace: confluent
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS    
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - bootstrap.35.242.166.238.nip.io
      - broker0.35.242.166.238.nip.io
      - broker1.35.242.166.238.nip.io
      - broker2.35.242.166.238.nip.io
      - mds.35.242.166.238.nip.io
      # secretName: kafka-ingress-tls
  rules:
    - host: bootstrap.35.242.166.238.nip.io
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: kafka-bootstrap
              port:
                number: 9092
    - host: broker0.35.242.166.238.nip.io
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: kafka-0-internal
              port:
                number: 9092
    - host: broker1.35.242.166.238.nip.io
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: kafka-1-internal
              port:
                number: 9092
    - host: broker2.35.242.166.238.nip.io
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: kafka-2-internal
              port:
                number: 9092
    - host: mds.services.confluent.acme.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: mds-bootstrap
              port:
                number: 8090
